# auto-theme.nvim

./: .gitignore  .luarc.json  .pre-commit-config.yaml  LICENSE  README.md  auto-theme.nvim-scm-1.rockspec  pyproject.toml  stylua.toml  vim.toml
.github/workflows/: luarocks.yaml  quality.yaml  test.yaml
doc/: auto-theme.nvim.txt
lua/auto-theme/: commands.lua  config.lua  health.lua  init.lua  log.lua  themes.lua  watcher.lua
plugin/: auto-theme.lua
watchers/: linux.py  macos.py
