[project]
name = "auto-theme-nvim"
version = "0.1.0"
description = "Platform-specific theme change watchers for auto-theme.nvim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-core>=12.1",
    "pyobjc-framework-cocoa>=12.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
